16 January 2024: Wouter
	- Fix to link with libssp for libcrypto and getaddrinfo check for
	  only header. Also update crosscompile to remove ssp for 32bit.
	- Merge #993: Update b.root-servers.net also in example config file.

15 January 2024: Wouter
	- Fix to link with -lcrypt32 for OpenSSL 3.2.0 on Windows.

9 January 2024: Wouter
	- Merge #988: Fix NLnetLabs#981: dump_cache truncates large records.

5 January 2024: Wouter
	- Merge #987: skip edns frag retry if advertised udp payload size is
	  not smaller.
	- Fix unit test for #987 change in udp1xxx retry packet send.

4 January 2024: Wouter
	- Remove unneeded newlines and improve indentation in remote control
	  code.

3 January 2024: Wouter
	- Merge #980: DoH: reject non-h2 early. To fix #979: Improve errors
	  for non-HTTP/2 DoH clients.
	- Merge #985: Add DoH and DoT to dnstap message.
	- Fix #983: Sha1 runtime insecure change was incomplete.

22 December 2023: Yorgos
	- Update example.conf with cookie options.

8 December 2023: Yorgos
	- Merge PR #973: Use the origin (DNAME) TTL for synthesized CNAMEs as
	  per RFC 6672.

8 December 2023: Wouter
	- Fix root_zonemd unit test, it checks that the root ZONEMD verifies,
	  now that the root has a valid ZONEMD.

7 December 2023: Wouter
	- Fix #974: doc: default number of outgoing ports without libevent.
	- Merge #975: Fixed some syntax errors in rpl files.

6 December 2023: Wouter
	- Fix to sync the tests script file common.sh.
	- iana portlist update.
	- Updated IPv4 and IPv6 address for b.root-servers.net in root hints.
	- Update test script file common.sh.
	- Fix tests to use new common.sh functions, wait_logfile and
	  kill_from_pidfile.

5 December 2023: Wouter
	- Merge #971: fix 'WARNING: Message has 41 extra bytes at end'.
	- Fix #969: [FR] distinguish Do53, DoT and DoH in the logs.
	- Fix dnstap that assertion failed on logging other than UDP and TCP
	  traffic. It lists it as TCP traffic.

27 November 2023: Yorgos